tests/baselines/reference/couldNotSelectGenericOverload.errors.txt
tests/cases/compiler/couldNotSelectGenericOverload.ts(3,11): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/couldNotSelectGenericOverload.ts(7,11): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/couldNotSelectGenericOverload.ts (2 errors) ====
    function makeArray<T>(items: T[]): T[] { return items; }
    var b = [1, ""];
    var b1G = makeArray(1, ""); // any, no error
              ~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    var b2G = makeArray(b); // any[]
    
    function makeArray2(items: any[]): any[] { return items; }
    var b3G = makeArray2(1, ""); // error
              ~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    